2.0 - unreleased
================

- Changed the canonical location of interfaces to be in a subpackage called
  interfaces in its standard plural form. Leave BBB imports behind in
  interface.py.
  [hannosch]

- Updated the ATCT tool upgrade to register the new tool with the portal
  site manager.
  [davisagli]

- Subtopics shouldn't always acquire the 'start' query. Fixes  
  https://dev.plone.org/plone/ticket/8827  
  [pelle]

- Use correct location for IObjectEvent.
  [hannosch]

- Removed test only PluggableAuthService dependency.
  [hannosch]

- Moved content type specific GenericSetup related functionality from CMFPlone
  into this package.
  [hannosch]

- Drop the dependency on simplejson. It's integrated into Python 2.6 as json.
  [hannosch]

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

- Changed objectIds and objectValues calls to use the IContainer API.
  [hannosch]

- Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

- Removed various dependencies on CMFPlone.
  [hannosch]

- Cleaned up tests some more. No longer rely on the testfixture extension
  profile but adapt the tests to default Plone instead.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Changed parameter name at script getXMLSelectVocab.py from 'method' to 
  'vocab_method' to avoid getting overridden from ZPublisher.HTTPRequest.
  This closes http://dev.plone.org/plone/ticket/6960.
  [igbun]

- Changed description label to summary for page and news item. This closes
  http://dev.plone.org/plone/ticket/8700.
  [hannosch]

- Adjusted functional tests to not rely on login portlet.
  [hannosch]

- Moved a manage_renameObject method from the autosort code into the ordered
  base class. It wasn't quite obvious, but the code was actually used.
  [hannosch]

- Removed icalendar package from the thirdparty folder. We don't use it