@@ -320,12 +320,12 @@ class ATCTFileContent(ATCTContent):
         return filename and filename.encode(encoding) or None
 
     def _setATCTFileContent(self, value, **kwargs):
-        """Set id to uploaded id
-        """
+        """Set ID based on name of uploaded file, Title, or possibly other conditions."""
         field = self.getPrimaryField()
         # set first then get the filename
         field.set(self, value, **kwargs) # set is ok
         if self._isIDAutoGenerated(self.getId()):
+            # My ID is a portal_factory-generated temporary one.
             filename = field.getFilename(self, fromBaseUnit=False)
             request = self.REQUEST
             clean_filename = self._cleanupFilename(filename, request=request)
@@ -335,16 +335,29 @@ class ATCTFileContent(ATCTContent):
                 # skip renaming when then request id is not autogenerated which
                 # means the user has defined an id. It's autogenerated when the
                 # the user has disabled "short name editing".
-                return
-            elif clean_filename == self.getId():
-                # destination id and old id are equal
-                return
-            elif clean_filename:
-                # got a clean file name - rename it
-                # apply subtransaction. w/o a subtransaction renaming
-                # fails when the type is created using portal_factory
+                pass
+            elif clean_filename and \
+                 self._should_set_id_to_filename(filename, self.Title()):
+                # If the user doesn't fill the Title field, Title() returns the
+                # uploaded file's name.
+                
+                # Apply subtransaction. Without a subtransaction, renaming
+                # fails when the type is created using portal_factory.
                 transaction.savepoint(optimistic=True)
                 self.setId(clean_filename)
+            # Else, fall through to BaseObject._renameAfterCreation(),
+            # which Archetypes calls after all the fields have been set. It will
+            # rename me based on my Title iff my ID looks autogenerated (which
+            # it does if we don't setId() here).
+
+    security.declarePrivate('_should_set_id_to_filename')
+    def _should_set_id_to_filename(self, filename, title):
+        """Given the name of the uploaded file and my title, return whether the filename should be used as my ID.
+        
+        Default implementation: if the filename changed, say that we should set
+        my ID to it.
+        """
+        return filename != self.getId()
 
     security.declareProtected(View, 'post_validate')
     def post_validate(self, REQUEST=None, errors=None):
@@ -359,14 +372,15 @@ class ATCTFileContent(ATCTContent):
             filename = os.path.basename(filename)
             filename = filename.split("\\")[-1]
         clean_filename = self._cleanupFilename(filename, request=REQUEST)
-        used_id = (id and not self._isIDAutoGenerated(id)) and id or clean_filename
+        used_id = id if (id and not self._isIDAutoGenerated(id)) else clean_filename
 
         if upload:
             # the file may have already been read by a
             # former method
             upload.seek(0)
 
-        if not used_id:
+        if not used_id or not self._should_set_id_to_filename(filename, REQUEST.form.get('title')):
+            # Set ID in whatever way the base classes usually do.
             return
 
         if getattr(self, 'check_id', None) is not None:
