@@ -1,22 +1,22 @@
+﻿# -*- coding: utf-8 -*-
+
+from cStringIO import StringIO
 import os
 import transaction
 
-from Testing import ZopeTestCase # side effect import. leave it here.
-from Products.ATContentTypes.tests import atcttestcase, atctftestcase
-
-from cStringIO import StringIO
 from OFS.Image import Image as OFSImage
-
 from Products.CMFCore.permissions import View
 from Products.CMFCore.permissions import ModifyPortalContent
 from Products.Archetypes.interfaces.layer import ILayerContainer
 from Products.Archetypes.atapi import *
-from Products.ATContentTypes.tests.utils import dcEdit, PACKAGE_HOME
-
 from Products.ATContentTypes.content.image import ATImage
 from Products.ATContentTypes.interfaces import IImageContent
 from Products.ATContentTypes.interfaces import IATImage
-
+from Products.ATContentTypes.tests import atcttestcase, atctftestcase
+from Products.ATContentTypes.tests.utils import dcEdit, PACKAGE_HOME
+from Products.Five.testbrowser import Browser
+from Products.PloneTestCase.PloneTestCase import FunctionalTestCase, setupPloneSite
+from Testing import ZopeTestCase # side effect import. leave it here.
 from zope.interface.verify import verifyObject
 
 # third party extension
@@ -46,6 +46,59 @@ def editATCT(obj):
     dcEdit(obj)
 
 tests = []
+
+
+setupPloneSite()
+
+class TestIDFromTitle(FunctionalTestCase):
+    """Browsertests to make sure ATImages derive their default IDs from their titles"""
+    # TODO: Merge into TestATImageFunctional, below.
+    
+    def afterSetUp(self):
+        self.userId = 'fred'
+        self.password = 'secret'
+        self.portal.acl_users.userFolderAddUser(self.userId, self.password, ['Manager'], [])
+        self.browser = Browser()
+        self._log_in()
+
+    def _log_in(self):
+        """Log in as someone who can add new Images."""
+        self.browser.open(self.portal.absolute_url())
+        self.browser.getLink('Log in').click()
+        self.browser.getControl('Login Name').value = self.userId
+        self.browser.getControl('Password').value = self.password
+        self.browser.getControl('Log in').click()
+
+    def _make_image(self, title, filename='canoneye.jpg'):
+        """Add a new Image at the root of the Plone site."""
+        self.browser.open(self.portal.absolute_url() + '/createObject?type_name=Image')
+        self.browser.getControl('Title').value = title
+        image = self.browser.getControl(name='image_file')
+        image.filename = filename
+        TEST_JPEG_FILE.seek(0)
+        image.value = TEST_JPEG_FILE
+        self.browser.getControl('Save').click()
+
+    def test_image_id_from_filename_and_title(self):
+        """Assert image ID is computed from title when provided, from filename when not."""
+        # Get ID from filename:
+        self._make_image('')
+        self.failUnless('canoneye.jpg' in self.browser.url)
+        
+        # Get ID from title.
+        # As a side effect, make sure the ID validator doesn't overzealously
+        # deny our upload of something else called canoneye.jpg, even though
+        # we're not going to compute its ID from its filename.
+        self._make_image('Wonderful Image')
+        self.failUnless('/wonderful-image' in self.browser.url, msg="The expected URL snippet was not in " + self.browser.url)
+
+    def test_image_id_from_unicode_title(self):
+        """Make sure a unicode filename doesn't throw off the should-I-take-my-ID-from-the-filename logic."""
+        self._make_image('', filename=u'Pictüre 1.png'.encode('utf-8'))
+        self.failUnless('Picture%201.png' in self.browser.url, msg="The expected URL snippet was not in " + self.browser.url)
+
+tests.append(TestIDFromTitle)
+
 
 class TestSiteATImage(atcttestcase.ATCTTypeTestCase):
 
